--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,9 +7,23 @@ spring:
       ddl-auto: validate
   datasource:
     url: jdbc:postgresql://localhost:5432/jinder
-    username: postgres
-    password: 1234
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
     driverClassName: org.postgresql.Driver
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: ${MAIL_USERNAME}
+    password: ${MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
+
+
 
 logging:
   level:
