--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,11 @@
 spring:
   liquibase:
     enabled: true
+
   jpa:
     hibernate:
       show-sql: true
-      ddl-auto: create-drop
+      ddl-auto: validate
   datasource:
     url: jdbc:postgresql://localhost:5432/jinder
     username: ${DB_USER}
